# FracESSA

./: .gitignore  CMakeLists.txt.old  README.md
.github/workflows/: release.yml  release.yml.less.old  release.yml.old
analysis/: REGENERATE_PROMPT.md  codebase_cpp.txt  codebase_python.txt  generate_codebase.sh
cpp/: CMakeLists.txt  vcpkg.json
cpp/include/fracessa/: bitset64.hpp  candidate.hpp  fracessa.hpp  matrix_server.hpp  supports.hpp
cpp/include/rational_linalg/: adjugate.hpp  adjugate_fraction.hpp  bareiss_lu.hpp  constants.hpp  copositivity.hpp  fast_rational.hpp  fraction.hpp  linear_solver.hpp  linear_solver_double.hpp  linear_solver_fraction.hpp  lu.hpp  lu_factor_fraction.hpp  matrix.hpp  matrix_double.hpp  matrix_fraction.hpp  positive_definite.hpp  positive_definite_double.hpp  positive_definite_fraction.hpp  types_rational.hpp
cpp/src/: checkstab.cpp  findeq.cpp  fracessa.cpp  main.cpp
cpp/tests/: CMakeLists.txt  test_bareiss_lu.cpp  test_bitset64.cpp  test_copositivity.cpp  test_fraction.cpp  test_integration.cpp  test_linear_solver.cpp  test_matrix.cpp  test_rational64.cpp
cpp/tests/test_data/: verification_matrices.json
python/: fracessa_py.py  run_matrices.py
python/verification/: baseline_result.json  create_baselines.py
