# Test executables
add_executable(test_matrix test_matrix.cpp)
target_link_libraries(test_matrix PRIVATE fracessa_lib gtest_main ${GMP_LIBRARIES})
target_include_directories(test_matrix PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
if(FLINT_BUILD_ENABLED)
    target_include_directories(test_matrix PRIVATE ${FLINT_INCLUDE_DIR})
    target_link_libraries(test_matrix PRIVATE ${FLINT_LIBRARIES} pthread)
    add_dependencies(test_matrix flint_build)
endif()

add_executable(test_linear_solver test_linear_solver.cpp)
target_link_libraries(test_linear_solver PRIVATE fracessa_lib gtest_main ${GMP_LIBRARIES})
target_include_directories(test_linear_solver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
if(FLINT_BUILD_ENABLED)
    target_include_directories(test_linear_solver PRIVATE ${FLINT_INCLUDE_DIR})
    target_link_libraries(test_linear_solver PRIVATE ${FLINT_LIBRARIES} pthread)
    add_dependencies(test_linear_solver flint_build)
endif()

add_executable(test_bareiss_lu test_bareiss_lu.cpp)
target_link_libraries(test_bareiss_lu PRIVATE fracessa_lib gtest_main ${GMP_LIBRARIES})
target_include_directories(test_bareiss_lu PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
if(FLINT_BUILD_ENABLED)
    target_include_directories(test_bareiss_lu PRIVATE ${FLINT_INCLUDE_DIR})
    target_link_libraries(test_bareiss_lu PRIVATE ${FLINT_LIBRARIES} pthread)
    add_dependencies(test_bareiss_lu flint_build)
endif()

add_executable(test_copositivity test_copositivity.cpp)
target_link_libraries(test_copositivity PRIVATE fracessa_lib gtest_main ${GMP_LIBRARIES})
target_include_directories(test_copositivity PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
if(FLINT_BUILD_ENABLED)
    target_include_directories(test_copositivity PRIVATE ${FLINT_INCLUDE_DIR})
    target_link_libraries(test_copositivity PRIVATE ${FLINT_LIBRARIES} pthread)
    add_dependencies(test_copositivity flint_build)
endif()

add_executable(test_bitset64 test_bitset64.cpp)
target_link_libraries(test_bitset64 PRIVATE fracessa_lib gtest_main)
target_include_directories(test_bitset64 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)

add_executable(test_integration test_integration.cpp)
target_link_libraries(test_integration PRIVATE fracessa_lib gtest_main ${GMP_LIBRARIES})
target_include_directories(test_integration PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
if(FLINT_BUILD_ENABLED)
    target_include_directories(test_integration PRIVATE ${FLINT_INCLUDE_DIR})
    target_link_libraries(test_integration PRIVATE ${FLINT_LIBRARIES} pthread)
    add_dependencies(test_integration flint_build)
endif()

add_executable(test_fraction test_fraction.cpp)
target_link_libraries(test_fraction PRIVATE fracessa_lib gtest_main ${GMP_LIBRARIES})
target_include_directories(test_fraction PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
if(FLINT_BUILD_ENABLED)
    target_include_directories(test_fraction PRIVATE ${FLINT_INCLUDE_DIR})
    target_link_libraries(test_fraction PRIVATE ${FLINT_LIBRARIES} pthread)
    add_dependencies(test_fraction flint_build)
endif()

# Copy test data to build directory
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/test_data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# Register tests with CTest
add_test(NAME MatrixTests COMMAND test_matrix)
add_test(NAME LinearSolverTests COMMAND test_linear_solver)
add_test(NAME BareissLUTests COMMAND test_bareiss_lu)
add_test(NAME CopositivityTests COMMAND test_copositivity)
add_test(NAME Bitset64Tests COMMAND test_bitset64)
add_test(NAME IntegrationTests COMMAND test_integration)
add_test(NAME FractionTests COMMAND test_fraction)

